# deepsleep-replace

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  app.py  data_cleanse_pipeline.py  pyproject.toml  requirements.txt  server.py  作业要求.md
.claude/: settings.local.json
checkpoints/tokenizer/: tokenizer.json  tokenizer_config.json
configs/: config_utils.py  cpt.yaml  dpo.yaml  dpo_qwen.yaml  pretrain.yaml  sft.yaml  sft_qwen.yaml  sft_qwen_multiturn_b0.1.yaml  sft_qwen_multiturn_b0.5.yaml
data/dpo/: dpo_prompts.jsonl
data/eval/: eval_responses.json  eval_scores.json
dataset/: __init__.py  lm_dataset.py  medical_qa_dataset.py  streaming_dataset.py
docs/: analysis_report.md  experiment-design-plan.md  paper-outline.md  paper.docx  paper.md  result-analysis-plan.md
docs/figures/: benchmark_results.csv  eval_scores_raw.xlsx  experiment_data.csv
model/: __init__.py
scripts/: compare_tracks.py  generate_multiturn_sft.py  generate_paper.py  generate_xiaoxi_all.py  generate_xiaoxi_dpo.py  md2docx.py  prepare_deepsleep_data.py  prepare_sleep_corpus.py  train_tokenizer.py  translate_to_english.py
scripts/analysis/: analyze_factorial.py  plot_benchmark_anova.py  plot_pipeline_waterfall.py  plot_sft_comparison.py
scripts/eval/: convert_to_hf.py  merge_results.py  plot_radar.py  run_benchmark.sh
scripts/evaluation/: eval_quality.py
scripts/run/: run_all.sh  run_cpt.sh  run_dpo.sh  run_dpo_experiments.sh  run_dpo_qwen.sh  run_pretrain.sh  run_sft.sh  run_sft_multiturn.sh  run_sft_qwen.sh
static/: index.html
static/assets/: index-Br-YLzLO.css  index-CDryp3cr.css  index-CNax_NDk.js  index-CpXyDMX_.js
tests/: test_chat.py  test_data_pipeline.py  test_model.py  test_pretrain.py  test_tokenizer.py  test_training.py
trainer/: plot_utils.py  train_cpt.py  train_dpo.py  train_dpo_qwen.py  train_pretrain.py  train_sft.py  train_sft_qwen.py  trainer_utils.py
training_artifacts/dpo_v2/: eval_log.jsonl  generation_samples.jsonl  report.json  train_log.jsonl
training_artifacts/lora_v1/: eval_log.jsonl  generation_samples.jsonl  report.json  train_log.jsonl
web/: index.html  package-lock.json  package.json  setup.sh  vite.config.js
(+101 files in other folders)
