[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepsleep-llm"
version = "0.1.0"
description = "Medical sleep health domain LLM (~2B params, MoE) built from scratch using HuggingFace ecosystem"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    # Core ML framework
    "torch>=2.1.0",
    # HuggingFace ecosystem
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "tokenizers>=0.19.0",
    "trl>=0.8.0",
    "accelerate>=0.29.0",
    # Training acceleration
    "deepspeed>=0.14.0",
    "flash-attn>=2.5.0",
    # Tokenization
    "sentencepiece>=0.2.0",
    "tiktoken>=0.6.0",
    # Inference
    "vllm>=0.4.0",
    # Utilities
    "einops>=0.7.0",
    "wandb>=0.16.0",
    # Configuration
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    # Data collection
    "biopython>=1.83",
    "arxiv>=2.1.0",
    "scrapy>=2.11.0",
    "trafilatura>=1.8.0",
    "wikipedia-api>=0.6.0",
    "pymupdf>=1.24.0",
    # Data processing
    "fasttext>=0.9.2",
    "datasketch>=1.6.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    # Serving
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by black)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
